--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,18 +1,16 @@
 {
   "name": "api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
   "type": "module",
   "scripts": {
-    "dev": "node --watch --loader ts-node/esm/transpile-only src/server.ts",
-    "database": "node --watch --loader ts-node/esm/transpile-only src/database.ts"
-  },
-  "devDependencies": {
-    "ts-node": "^10.9.2",
-    "typescript": "^5.0.0"
+    "dev": "tsx watch src/server.ts"
   },
   "dependencies": {
-    "sqlite3": "^5.1.7"
+    "@hono/node-server": "^1.13.8",
+    "better-sqlite3": "^11.8.1",
+    "hono": "^4.7.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1"
   }
 }
