--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,23 +1,14 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "NodeNext",
     "strict": true,
-    "outDir": "bin",
-    "allowJs": true,
-    "maxNodeModuleJsDepth": 10,
-    "emitDecoratorMetadata": true,
-    "resolvePackageJsonImports": true,
-    "target": "ES2024",
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "sourceMap": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "strictPropertyInitialization": false,
-    "esModuleInterop": true,
-    "pretty": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "forceConsistentCasingInFileNames": true
-  },
-  "include": ["src"]
+    "verbatimModuleSyntax": true,
+    "skipLibCheck": true,
+    "types": [
+      "node"
+    ],
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx",
+  }
 }
